# openbix

./: .gitignore  Caddyfile  LICENSE  README.md  docker-compose.yaml  prometheus.yml
backend/: .env.example  dockerfile  pyproject.toml
backend/src/backend/: __main__.py  config.py  prometheus.py
backend/src/backend/authz/: service.py
backend/src/backend/core/: dto.py  entity.py  event.py  message.py  utils.py
backend/src/backend/emq/: dto.py  service.py
backend/src/backend/event_bus/: events.py  service.py
backend/src/backend/game_account/: dto.py  events.py  messages.py  models.py  repository.py  service.py
backend/src/backend/i18n/: container.py  language.py
backend/src/backend/invite/: dto.py  events.py  models.py  repository.py  service.py
backend/src/backend/repository/: base.py  mongo.py
backend/src/backend/scheduler/: dto.py  service.py
backend/src/backend/subscription/: dto.py  events.py  models.py  repository.py  service.py
backend/src/backend/tariff/: dto.py  repository.py  service.py
backend/src/backend/task/: events.py  messages.py  service.py
backend/src/backend/telegram/: events.py  middleware.py  service.py
backend/src/backend/user/: dto.py  events.py  models.py  repository.py  service.py
worker/: .env.example  dockerfile  pyproject.toml
worker/src/worker/: __main__.py  captcha_recognition_client.py  commonservice_client.py  config.py  event_bus.py  ip_api_client.py  moonbix_client.py  network_client.py
worker/src/worker/captcha/: dto.py  service.py
worker/tests/: test_captcha.py  test_game.py
(+41 files in other folders)
